# voxel

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
res/shaders/: Basic.shader  Fragment.shader  Outline.shader  Texture.shader  Vertex.shader
src/: log.h  main.cpp  threadpool.hpp
src/engine/: Input.cpp  Input.h  Player.h  VertexArray.cpp  VertexArray.h  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.h  VertexBuffer.hpp  VertexBufferLayout.h  VertexBufferLayout.hpp  camera.cpp  camera.h  shader.cpp  shader.h  texture.cpp  texture.h
src/world/: block.h  chunk.cpp  chunk.h  world.cpp  world.h
